--- a/pom.xml
+++ b/pom.xml
@@ -1,74 +1,83 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  <groupId>uk.co.infokinesis.pdfutils</groupId>
-  <artifactId>PDFCombiner</artifactId>
-  <version>1.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
+	<groupId>uk.co.infokinesis.pdfutils</groupId>
+	<artifactId>PDFCombiner</artifactId>
+	<version>1.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 
-  <name>PDFCombiner</name>
-  <url>http://maven.apache.org</url>
+	<name>PDFCombiner</name>
+	<url>http://maven.apache.org</url>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
+			<scope>test</scope>
+		</dependency>
 
-    <dependency>
-      <groupId>com.itextpdf</groupId>
-      <artifactId>itextpdf</artifactId>
-      <version>5.1.3</version>
-      <type>jar</type>
-    </dependency>
+		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>itextpdf</artifactId>
+			<version>5.1.3</version>
+			<type>jar</type>
+		</dependency>
 
-    <dependency>
-      <groupId>com.itextpdf.tool</groupId>
-      <artifactId>xmlworker</artifactId>
-      <version>1.1.1</version>
-      <type>jar</type>
-    </dependency>
-    
-  </dependencies>
-  
-  <!-- Build this with: mvn package appassembler:assemble -->
-  <build>
-  	<plugins>
-  		<plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>appassembler-maven-plugin</artifactId>
-            <version>1.2.2</version>
-            <configuration>
-            	<configurationDirectory>conf</configurationDirectory>
-		        <copyConfigurationDirectory>true</copyConfigurationDirectory>
-		        <includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
-            	
-            	<assembleDirectory>${project.build.directory}/PDFCombiner</assembleDirectory>
-                <binFileExtensions>
-                    <unix>.sh</unix>
-                </binFileExtensions>
-                <programs>
-                    <program>
-                        <mainClass>uk.co.infokinesis.pdfutils.PDFCombiner</mainClass>
-                        <name>PDFCombiner</name>
-                    </program>
-                </programs>
-            </configuration>
-        </plugin>
-  	</plugins>
-  </build>
-  
-  
-  <scm>
-	<connection>scm:git:git@github.com:lyneux/PDFCombiner.git</connection>
-	<url>https://github.com/lyneux/PDFCombiner</url>
-	<developerConnection>scm:git:git@github.com:lyneux/PDFCombiner.git</developerConnection>
-  </scm>
-          
+		<dependency>
+			<groupId>com.itextpdf.tool</groupId>
+			<artifactId>xmlworker</artifactId>
+			<version>1.1.1</version>
+			<type>jar</type>
+		</dependency>
+
+	</dependencies>
+
+	<!-- Build this with: mvn package appassembler:assemble -->
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>appassembler-maven-plugin</artifactId>
+				<version>1.2.2</version>
+				<configuration>
+					<configurationDirectory>conf</configurationDirectory>
+					<copyConfigurationDirectory>true</copyConfigurationDirectory>
+					<includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
+
+					<assembleDirectory>${project.build.directory}/PDFCombiner</assembleDirectory>
+					<binFileExtensions>
+						<unix>.sh</unix>
+					</binFileExtensions>
+					<programs>
+						<program>
+							<mainClass>uk.co.infokinesis.pdfutils.PDFCombiner</mainClass>
+							<name>PDFCombiner</name>
+							<!-- 
+							<jvmSettings>
+								<initialMemorySize>20m</initialMemorySize>
+								<maxMemorySize>256m</maxMemorySize>
+								<maxStackSize>128m</maxStackSize>
+							</jvmSettings>
+							 -->
+						</program>
+					</programs>
+					<extraJvmArguments>-XX:+HeapDumpOnOutOfMemoryError</extraJvmArguments>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
+
+	<scm>
+		<connection>scm:git:git@github.com:lyneux/PDFCombiner.git</connection>
+		<url>https://github.com/lyneux/PDFCombiner</url>
+		<developerConnection>scm:git:git@github.com:lyneux/PDFCombiner.git</developerConnection>
+	</scm>
+
 </project>
