--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>uk.co.infokinesis.pdfutils</groupId>
 	<artifactId>PDFCombiner</artifactId>
-	<version>1.1</version>
+	<version>1.2-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>PDFCombiner</name>
